--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,73 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.creepster-regular {
+  font-family: "Creepster", system-ui;
+  font-weight: 400;
+  font-style: normal;
+}
+body {
+  font-family: 'Lato';
+  margin: 0;
+  
+}
+.main {
+  /* width: 100%;
+  min-height: 100vh;   */
+}
+
+.header, .footer {
+  background-color: #FCFBF0;
+  width: 100%;
+  text-align: center;
+}
+.header-title {
+  font-family: 'Creepster';
+  font-weight: 400;
+  color: red;
+  font-size: 6rem;
+  line-height: 2.25rem;
+}
+
+.search-container {
+  width: 100%;
+  display: flex;
+  background-color: #2C1015;
+  padding: 3rem;
+  justify-content: center;
+}
+
+.search {
+  border-radius: 30px;
+  background-color: #FCFBF0  ;
+}
+
+.btn {
+  border-radius: 30px;
+  background-color: #5BFF49;
+}
+
+.movie-list {
+  text-align: center;
+  list-style-type: none;
+}
+
+.main-content {
+  background-image: url("/src/assets/horror.jpg");
+  background-repeat:no-repeat; 
+  background-position: center;
+  background-size: cover;
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5rem;
+}
+.display-container {
+  display: flex;
+  flex-direction: column;
+  background-color: #FCFBF0;
+  border-radius: 30px;
+  justify-content: center;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
