--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,29 @@
-.creepster-regular {
-  font-family: "Creepster", system-ui;
-  font-weight: 400;
-  font-style: normal;
-}
+* {
+  margin: 0;
+  padding: 0;
+  }
 body {
   font-family: 'Lato';
   margin: 0;
   
 }
+
+/* p {
+  margin: 0;
+} */
+
 .main {
   /* width: 100%;
   min-height: 100vh;   */
+  background-image: url("/src/assets/horror.jpg");
+  background-repeat:no-repeat; 
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  /* align-items: center; */
 }
 
 .header, .footer {
@@ -18,56 +31,69 @@ body {
   width: 100%;
   text-align: center;
 }
+footer {
+  margin-top: auto;
+}
 .header-title {
   font-family: 'Creepster';
   font-weight: 400;
   color: red;
-  font-size: 6rem;
+  font-size: 2rem;
   line-height: 2.25rem;
+  /* media query this
+  font-size: 6rem; */
 }
 
 .search-container {
   width: 100%;
   display: flex;
   background-color: #2C1015;
-  padding: 3rem;
   justify-content: center;
+  padding: 1rem;
 }
 
 .search {
   border-radius: 30px;
   background-color: #FCFBF0  ;
+  padding: .2rem;
+  margin-right: 2rem;
 }
 
 .btn {
-  border-radius: 30px;
+  border-radius: 16px;
   background-color: #5BFF49;
+  padding: .5rem;
 }
 
 .movie-list {
+  border-radius: 15px;
+  background-color: #FCFBF0;
   text-align: center;
   list-style-type: none;
+  /* width: 50%;
+  justify-content: center; */
+  /* padding: 1rem;
+  margin: 1rem; */
 }
 
 .main-content {
-  background-image: url("/src/assets/horror.jpg");
-  background-repeat:no-repeat; 
-  background-position: center;
-  background-size: cover;
-  height: fit-content;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 5rem;
+  
+  
+  padding: 2rem;
 }
 .display-container {
   display: flex;
   flex-direction: column;
   background-color: #FCFBF0;
-  border-radius: 30px;
+  border-radius: 20px;
   justify-content: center;
   text-align: center;
+  padding: 1rem;
+  
+}
+
+.movie-poster {
+  width: 100%;
 }
 
 
