--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   }
 body {
   font-family: 'Lato';
@@ -23,7 +24,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .header, .footer {
@@ -57,12 +58,18 @@ footer {
   background-color: #FCFBF0  ;
   padding: .2rem;
   margin-right: 2rem;
+  cursor: pointer;
 }
 
 .btn {
   border-radius: 16px;
   background-color: #5BFF49;
   padding: .5rem;
+  cursor: pointer;
+}
+.movie-list-container {
+  width: 50%;
+  margin-top: 5rem;
 }
 
 .movie-list {
@@ -70,6 +77,7 @@ footer {
   background-color: #FCFBF0;
   text-align: center;
   list-style-type: none;
+  cursor: pointer;
   /* width: 50%;
   justify-content: center; */
   /* padding: 1rem;
@@ -86,10 +94,11 @@ footer {
   flex-direction: column;
   background-color: #FCFBF0;
   border-radius: 20px;
-  justify-content: center;
+  /* justify-content: center; */
   text-align: center;
   padding: 1rem;
-  
+  /* width: 50%; */
+
 }
 
 .movie-poster {
